# utago

./: Cargo.toml  README.md  config.toml
app/: Cargo.toml  Dioxus.toml  README.md  tailwind.css
app/assets/: main.css  tailwind.css
app/components/: add_song.rs  home.rs  icons.rs  library_browser.rs  mascot.rs  mod.rs
app/src/: a.md  main.rs
audio/: Cargo.toml
audio/src/: lib.rs
common/: Cargo.toml
common/src/: conf.rs  lib.rs
inference/: Cargo.toml
inference/src/: lib.rs  prelude.rs
inference/src/lyrics/: mod.rs  spec.rs
inference/src/shazam/: mod.rs
search/: Cargo.toml
search/src/: lib.rs
