[workspace]
members = ["app", "app", "inference"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"

[workspace.dependencies]
serde_json = "1"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1"
features = ["full"]
