[package]
name = "app"
version = "0.1.0"
authors = ["ashu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio = { path = "../audio" }
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
inference = { path = "../inference" }
library = { path = "../library" }
search = { path = "../search" }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
